--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^18.1.0",
     "react-router-dom": "^5.1.1",
     "react-scripts": "5.0.1",
+    "react-svg": "^15.0.1",
     "sass": "^1.52.1",
     "web-vitals": "^2.1.0"
   },
