--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,11 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.8.0",
+    "@mui/material": "^5.8.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^5.1.1",
     "react-scripts": "5.0.1",
     "react-svg": "^15.0.1",
