--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,6 @@
 FROM openjdk:8-jdk-alpine
-COPY spring-mysql.jar spring-mysql.jar
-EXPOSE 8082
-ENTRYPOINT ["java", "-jar", "spring-mysql.jar"]
+RUN addgroup -S spring && adduser -S spring -G spring
+USER spring:spring
+ARG JAR_FILE=spring-mysql.jar
+COPY ${JAR_FILE} app.jar
+ENTRYPOINT ["java","-jar","/app.jar"]
