--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,11 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "carousel-react-rcdev": "^0.0.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-input-mask": "^2.0.4",
+    "react-material-ui-carousel": "^3.3.3",
     "react-router-dom": "^5.1.1",
     "react-scripts": "5.0.1",
     "react-svg": "^15.0.1",
